fixed main content padding on smaller viewports

--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -12,7 +12,7 @@
 
 @media (max-width: 768px) {
   .main-content {
-    padding-top: 1em;
+    padding: 1em;
     width: 100vh;
   }
 }
